// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PopLimit:Push 2`] = `
{
  "content": "0",
  "created_at": 1683187195,
  "id": "0",
  "kind": 3,
  "pubkey": "p",
  "sig": "33",
  "tags": [],
}
`;

exports[`PopLimit:Push 3`] = `
{
  "content": "1",
  "created_at": 1683187196,
  "id": "1",
  "kind": 3,
  "pubkey": "p",
  "sig": "33",
  "tags": [],
}
`;

exports[`PopLimit:Push 4`] = `
{
  "content": "2",
  "created_at": 1683187197,
  "id": "2",
  "kind": 3,
  "pubkey": "p",
  "sig": "33",
  "tags": [],
}
`;

exports[`PopLimit:Push 5`] = `
{
  "content": "3",
  "created_at": 1683187198,
  "id": "3",
  "kind": 3,
  "pubkey": "p",
  "sig": "33",
  "tags": [],
}
`;

exports[`PopLimit:Push 6`] = `
{
  "content": "4",
  "created_at": 1683187199,
  "id": "4",
  "kind": 3,
  "pubkey": "p",
  "sig": "33",
  "tags": [],
}
`;

exports[`PopLimit:onLimitPop 1`] = `
{
  "content": "0",
  "created_at": 1683187195,
  "id": "0",
  "kind": 3,
  "pubkey": "p",
  "sig": "33",
  "tags": [],
}
`;

exports[`PopLimit:onLimitPop 2`] = `
{
  "content": "1",
  "created_at": 1683187196,
  "id": "1",
  "kind": 3,
  "pubkey": "p",
  "sig": "33",
  "tags": [],
}
`;

exports[`PopLimit:onLimitPop 3`] = `
{
  "content": "2",
  "created_at": 1683187197,
  "id": "2",
  "kind": 3,
  "pubkey": "p",
  "sig": "33",
  "tags": [],
}
`;

exports[`PopLimit:onLimitPop 4`] = `
{
  "content": "3",
  "created_at": 1683187198,
  "id": "3",
  "kind": 3,
  "pubkey": "p",
  "sig": "33",
  "tags": [],
}
`;

exports[`PopLimit:onLimitPop 5`] = `
{
  "content": "4",
  "created_at": 1683187199,
  "id": "4",
  "kind": 3,
  "pubkey": "p",
  "sig": "33",
  "tags": [],
}
`;
